2016-07-05 Revenge Guage 증감추가
2016-07-05 Revenge Guage 공격 및 사용에 따른 증감 효과 추가

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,3 @@
-*.meta
-metadata\
-Library\
 #################
 ## Eclipse
 #################
@@ -225,5 +222,7 @@ pip-log.txt
 *.dll
 *.mdb
 *.asset
-*.asset
-PerHaps High Noon/Library/assetDatabase3
+PerHaps High Noon/Library/
+PerHaps High Noon/Temp/
+Library/
+PerHaps High Noon/Library/metadata/
