--- a/.gitignore
+++ b/.gitignore
@@ -226,3 +226,5 @@ PerHaps High Noon/Library/
 PerHaps High Noon/Temp/
 Library/
 PerHaps High Noon/Library/metadata/
+PerHaps High Noon/Library/metadata/00/00000000000000008000000000000000
+PerHaps High Noon/Library/metadata/f9/f92effdc8781d5d468e5a7cca3b37a79
